[package]
name = "sparse_array"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Array/Map for large & sparse data"

[dependencies]
bitcode = { version = "0.6.9", optional = true }

[features]
default = []
bitcode = ["dep:bitcode"]

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "vs_hashmap"
harness = false

[[bench]]
name = "vs_vec"
harness = false
